fixing text overflow

--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,8 @@
     bottom: 7px;
     width: 220px;
     display: flex;
-}
-
-.rubik-tab {
-  font-family: "Rubik", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 360;
-  font-style: normal;
+    overflow: hidden;
+    transition: opacity 0.5s ease;
 }
 
 .tab:hover{
